--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "grunt": "~0.4.4",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-contrib-cssmin": "latest",
+    "jshint-stylish": "latest",
     "grunt-contrib-less": "latest",
-    "grunt-contrib-htmlmin": "latest",
-    "jshint-stylish": "~0.1.5"
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-watch": "latest"
   }
 }
